# sdlpal-wasm

./: .gitignore  .gitmodules  sdlpal.code-workspace
emscripten/: HOWTO.md  Makefile  pal_config.h  sdlpal.html  sdlpal.wasm.map
meson-emcc/: Dockerfile  emscripten-cross-file.txt  justfile  meson.build  meson_options.txt  plan.md
src/: alchemy.c  alchemy.h  battle.c  common.h  es_bridge.c  es_bridge.h  fight.c  font.c  global.c  global.h  input.c  itemmenu.c  itemmenu.h  magicmenu.c  magicmenu.h  main.c  main.h  palcommon.h  play.c  script.c  text.c  ui.c  ui.h  uibattle.c  uigame.c  uigame.h  util.c  util.h
unix/: Makefile  pal_config.h
